--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
                 </li>
             </ul>
         </nav>
-        </header>
+    </header>
 
 <!-- Hero-Content Section -->
-    <div class="hero"></div>
-    <section class="content" >
+<div class="hero"></div>
+    <section class="content">
         <article id="search-engine-optimization">
-            <!-- I attempted to removed the class="float-left" and class="float-right"from this section.
-            I then removed the styles for these classes in style.css. I moved the "margin: 25px 25px;" and "float:left;" to 
-            the .content img style and added "float: left;" to the .content article style. The issue was the middle img
-            would not float to the right. I then moved the middle img below the last p (</p>) but this did not work either.  -->
+            <!-- I attempted to remove the class="float-left" and class="float-right"from this section.√
+            I then removed the styles for these classes in style.css. 
+            I moved the "margin: 25px 25px;" and "float:left;" to the .content img style and added "float: left;" to the .content article style. 
+            The issue was the middle img would not float to the right. 
+            I then moved the middle img below the last p (</p>) but this did not work either.  -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p> 
@@ -56,6 +57,7 @@
             </p>
         </article>
 
+
         <article id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -67,7 +69,7 @@
     </section>
 
 <!-- Benefits Section-->
-    <div class="benefits">
+    <section class="benefits">
         <div>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt=""/>
@@ -91,7 +93,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </section>
 
 <!-- Footer Section -->
     <footer>
