--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </header>
 
 <!-- Hero-Content Section -->
+</main>
 <div class="hero"></div>
     <section class="content">
         <article id="search-engine-optimization">
@@ -94,7 +95,7 @@
             </p>
         </div>
     </section>
-
+</main>
 <!-- Footer Section -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
